IVYPORTAL-17168 add null check to DashboardBean - Add check null